# Rustbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  docker-compose.yml  renovate.json  run.sh  tomlfmt.toml
.cargo/: config.toml
cmds/: Cargo.toml
cmds/src/: dispatch.rs  eightball.rs  lib.rs  uptime.rs
cmds/src/dispatch/: dev.rs  edit_test.rs  eightball.rs  pin_test.rs  ping.rs  uptime.rs
events/: Cargo.toml
events/src/: events.rs  lib.rs
events/src/events/: ready.rs  shards.rs
jobs/: Cargo.toml
jobs/src/: lib.rs  tasks.rs
src/: commands.rs  errors.rs  internals.rs  main.rs  shutdown.rs
src/commands/: data.rs  dev.rs  eightball.rs  eval.rs  mod.rs  ping.rs  sample.rs  uptime.rs
src/controllers/: database.rs
src/internals/: config.rs  mod.rs  tasks.rs  tsclient.rs  utils.rs
src/internals/tasks/: sample.rs
src/models/: sample.rs
tasks/: Cargo.toml
tasks/src/: lib.rs
tsclient/: Cargo.toml
tsclient/src/: lib.rs
