[package]
name = "rustbot"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "cmds",
  "events",
  "library",
  "tasks",
  "tsclient"
]

[workspace.dependencies]
bytes = "1.10.1"
cargo_toml = "0.22.1"
poise = "0.6.1"
regex = "1.11.1"
serde = "1.0.219"
rand = "0.9.1"
sysinfo = "0.34.2"
time = "0.3.41"
uptime_lib = "0.3.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12.15", features = ["native-tls-vendored"] }
rustbot_lib = { path = "library" }

[dependencies]
poise = { workspace = true }
rustbot_cmds = { path = "cmds" }
rustbot_events = { path = "events" }
rustbot_lib = { workspace = true }
rustbot_tasks = { path = "tasks" }
rustbot_tokens = { path = "tsclient" }
tokio = { workspace = true }

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }

[features]
production = ["rustbot_lib/production", "rustbot_events/production"]
not_ready = ["rustbot_lib/not_ready"]

[[bin]]
name = "rustbot"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
