[package]
name = "rustbot"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["cmds", "events", "library"]

[workspace.dependencies]
asahi = { git = "https://github.com/Niko-Devel/asahi", branch = "master", features = ["coordinator"] }
bytes = "1.10.1"
cargo_toml = "0.22.1"
poise = { git = "https://git.playground.red/nwerosama/poise", branch = "cv2" }
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["native-tls-vendored"] }
rustbot_lib = { path = "library" }
serde = "1.0.219"
sysinfo = "0.36.0"
time = "0.3.41"
tokenservice-client = { version = "0.4.5", registry = "local" }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "signal"] }

[dependencies]
asahi = { workspace = true }
poise = { workspace = true }
rustbot_cmds = { path = "cmds" }
rustbot_events = { path = "events" }
rustbot_lib = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "rustbot"
path = "src/main.rs"

[patch.crates-io]

[features]
production = [
    "rustbot_lib/production",
    "rustbot_cmds/production",
    "rustbot_events/production",
]
not_ready = ["rustbot_lib/not_ready"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
