[package]
name = "rustbot_cmds"
version = "0.1.0"
edition = "2024"

[dependencies]
asahi = { workspace = true }
bytes = { workspace = true }
poise = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rustbot_lib = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }

[features]
production = []
